Sweeping trx from deposit wallets to collection wallets
